# bodh

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  bench-history.csv
.github/workflows/: release.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
examples/: basic.rs
scripts/: bench-history.sh
src/: attention.rs  bayesian.rs  bridge.rs  cognition.rs  decision.rs  development.rs  emotion.rs  error.rs  irt.rs  learning.rs  lib.rs  memory.rs  motivation.rs  perception.rs  psychometrics.rs  psychophysics.rs  social.rs  stress.rs
tests/: integration.rs
